# NavarroHumanEyeModel

./: .gitignore  CMakeLists.txt  README.md
gdt/: CMakeLists.txt
src/: eye.cpp  eye.h  geometry.h  main.cpp
